fixing subheader overlapping header on screen 1

--- a/client/src/components/Landing/Landing.scss
+++ b/client/src/components/Landing/Landing.scss
@@ -18,7 +18,6 @@
     font-size: 80px;
     font-style: normal;
     font-weight: 700;
-    height: 254px;
     letter-spacing: -2.50px;
   }
   span {
